--- a/src/styles/components/bannner.scss
+++ b/src/styles/components/bannner.scss
@@ -31,6 +31,7 @@
             }
             p {
                 width: 80%;
+                margin: 2rem 0;
                 color: #888888;
                 font-size: 1.7rem;
                 line-height: 1.3;
@@ -47,10 +48,16 @@
                 font-weight: 600;
                 border: 4px solid $green;
                 border-radius: 67px;
+                transition: .3s ease;
+                &:hover {
+                    text-decoration: none;
+                    background-color: $green;
+                    color: $white;
+                }
             }
         }
         .banner-right {
-            background-color: $peach;
+            background-image: linear-gradient($orange, $peach);
             width: 44%;
             height: 100vh;
             position: relative;
@@ -61,7 +68,9 @@
                 width: 40px;
             }
             #girl {
-                width: 100%;
+                margin-top: 8rem;
+                margin-left: 4rem;
+                width: 80%;
             }
 
             #dots {
