--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Nunito:wght@200;300;400;600&family=Raleway:wght@100;200;300;400&display=swap');
-@import './variables.scss';
-@import './components/bannner.scss';
-@import './components/action.scss';
-@import './components/table.scss';
-@import './components/block.scss';
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Nunito:wght@200;300;400;600&family=Raleway:wght@100;200;300;400&display=swap");
+@import "./variables.scss";
+@import "./components/bannner.scss";
+@import "./components/action.scss";
+@import "./components/table.scss";
+@import "./components/block.scss";
 // font-family: 'Amatic SC', cursive;
 // font-family: 'Nunito', sans-serif;
 // font-family: 'Raleway', sans-serif;
@@ -20,6 +20,26 @@
 html {
     body {
         box-sizing: border-box;
-        font-family: 'Raleway', sans-serif;
+        font-family: "Raleway", sans-serif;
+
+        input {
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-radius: 1rem;
+            padding: 0 4px;
+            color: $white;
+            font-size: 3rem;
+            text-align: center;
+            font-weight: 600;
+            background-color: transparent;
+            caret-color: $yellow;
+            font-family: 'Amatic SC', cursive;
+        }
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
     }
 }
