--- a/src/styles/components/bannner.scss
+++ b/src/styles/components/bannner.scss
@@ -12,7 +12,7 @@
                 margin: 0;
                 font-family: 'Amatic SC', cursive;
                 position: absolute;
-                font-size: 1.5rem;
+                font-size: 1.8rem;
                 font-weight: 600;
                 top: 2%;
                 left: 10%;
@@ -65,7 +65,7 @@
                 position: absolute;
                 top: 2%;
                 right: 10%;
-                width: 40px;
+                width: 3.5rem;
             }
             #girl {
                 margin-top: 8rem;
