--- a/src/styles/components/action.scss
+++ b/src/styles/components/action.scss
@@ -1,14 +1,60 @@
 .action {
-    height: 200vh;
+    height: 100vh;
     background-color: $purple;
     &-hero {
         @include justify(space-between, center);
         flex-direction: column;
+        position: relative;
         &-heading {
             font-family: 'Amatic SC', cursive;
             font-size: 4rem;
             color: $white;
             margin: 2rem 0;
+        }
+        &-btns {
+            .btn {
+                button {
+                    width: 15rem;
+                    height: 15rem;
+                    cursor: pointer;
+                    position: absolute;
+                    border: 2px solid $black;
+                    border-radius: 100%;
+                    background-color: $black;
+                    color: $white;
+                    font-family: 'Amatic SC', cursive;
+                    font-size: 5rem;
+                    @include justify(center, center);
+                    &#check {
+                        top: 20%;
+                        left: 5%;
+                    }
+                    &#solve {
+                        width: 18rem;
+                        height: 18rem;
+                        font-size: 6rem;
+                        bottom: 1%;
+                        left: 15%;
+                    }
+                    &#clear {
+                        width: 8rem;
+                        height: 8rem;
+                        font-size: 3rem;
+                        bottom: 1%;
+                        right: 20%;
+                    }
+                    &#new {
+                        &.disabled {
+                            opacity: 0.7;
+                            cursor: default;
+                            font-size: 3rem;
+                        }
+                        font-size: 4rem;
+                        top: 30%;
+                        right: 10%;
+                    }
+                }
+            }
         }
     }
 }
