--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Nunito:wght@200;300;400;600&family=Raleway:wght@100;200;300;400&display=swap');
 @import './variables.scss';
+@import './breakpoints.scss';
 @import './components/bannner.scss';
 @import './components/action.scss';
 @import './components/table.scss';
 @import './components/block.scss';
+@import './components//footer.scss';
 // font-family: 'Amatic SC', cursive;
 // font-family: 'Nunito', sans-serif;
 // font-family: 'Raleway', sans-serif;
-
 * {
     margin: 0;
     padding: 0;
@@ -40,6 +41,9 @@ html {
                 background-color: rgb(228, 39, 39);
                 color: $black;
                 border-radius: 100%;
+            }
+            @include media('<=phone') {
+                font-size: 2.5rem;
             }
         }
         input::-webkit-outer-spin-button,
