--- a/src/styles/components/action.scss
+++ b/src/styles/components/action.scss
@@ -1,17 +1,31 @@
 .action {
     height: 100vh;
     background-color: $purple;
+
     &-hero {
         @include justify(space-between, center);
         flex-direction: column;
         position: relative;
+
         &-heading {
             font-family: 'Amatic SC', cursive;
             font-size: 4rem;
             color: $white;
             margin: 2rem 0;
+            @include media('<=desktop', '>tablet') {
+                font-size: 3rem;
+            }
+            @include media('<=phone') {
+                font-size: 2rem;
+            }
         }
         &-btns {
+            @include media('<=phone') {
+                @include justify(center, center);
+                flex-wrap: wrap;
+                width: 350px;
+            }
+
             .btn {
                 button {
                     width: 15rem;
@@ -24,10 +38,30 @@
                     color: $white;
                     font-family: 'Amatic SC', cursive;
                     font-size: 5rem;
+
                     @include justify(center, center);
+
+                    @include media('<=phone') {
+                        margin: 10px;
+                    }
                     &#check {
                         top: 20%;
                         left: 5%;
+                        color: $green;
+                        @include media('<=desktop') {
+                            width: 10rem;
+                            height: 10rem;
+                        }
+                        @include media('<=tablet') {
+                            left: 2%;
+                            top: 2%;
+                        }
+                        @include media('<=phone') {
+                            position: relative;
+                            width: 6rem;
+                            height: 6rem;
+                            font-size: 2.5rem;
+                        }
                     }
                     &#solve {
                         width: 18rem;
@@ -35,6 +69,21 @@
                         font-size: 6rem;
                         bottom: 1%;
                         left: 15%;
+                        color: $yellow;
+                        @include media('<=desktop') {
+                            width: 12rem;
+                            height: 12rem;
+                        }
+                        @include media('<=tablet') {
+                            left: 2%;
+                            bottom: -22%;
+                        }
+                        @include media('<=phone') {
+                            position: relative;
+                            width: 6rem;
+                            height: 6rem;
+                            font-size: 2.5rem;
+                        }
                     }
                     &#clear {
                         width: 8rem;
@@ -42,16 +91,53 @@
                         font-size: 3rem;
                         bottom: 1%;
                         right: 20%;
+                        color: $orange;
+                        @include media('<=desktop') {
+                            width: 8rem;
+                            height: 8rem;
+                        }
+                        @include media('<=tablet') {
+                            right: 2%;
+                            bottom: -20%;
+                        }
+                        @include media('<=phone') {
+                            position: relative;
+                            width: 6rem;
+                            height: 6rem;
+                            font-size: 2.5rem;
+                        }
                     }
                     &#new {
                         &.disabled {
                             opacity: 0.7;
                             cursor: default;
                             font-size: 3rem;
+                            @include media('<=desktop') {
+                                font-size: 2rem;
+                            }
+                            @include media('<=phone') {
+                                font-size: 1.5rem;
+                            }
                         }
                         font-size: 4rem;
                         top: 30%;
                         right: 10%;
+                        @include media('<=desktop') {
+                            font-size: 2rem;
+                            width: 10rem;
+                            height: 10rem;
+                            top: 20%;
+                        }
+                        @include media('<=tablet') {
+                            right: 2%;
+                            top: 2%;
+                        }
+                        @include media('<=phone') {
+                            position: relative;
+                            width: 7rem;
+                            height: 7rem;
+                            font-size: 2.5rem;
+                        }
                     }
                 }
             }
