--- a/src/styles/components/bannner.scss
+++ b/src/styles/components/bannner.scss
@@ -8,6 +8,9 @@
             position: relative;
             @include justify(center, flex-start);
             flex-direction: column;
+            width: 56%;
+            @include media('<=phone') {
+            }
             #logo {
                 margin: 0;
                 font-family: 'Amatic SC', cursive;
@@ -18,8 +21,11 @@
                 left: 10%;
                 width: 50px;
                 margin-bottom: 40px;
+                @include media('<=phone') {
+                    font-size: 1.5rem;
+                }
             }
-            width: 56%;
+
             h2 {
                 font-family: 'Amatic SC', cursive;
                 font-size: 6rem;
@@ -27,6 +33,9 @@
                 &.sudoku {
                     color: $green;
                     margin: 0;
+                }
+                @include media('<=phone') {
+                    font-size: 3rem;
                 }
             }
             p {
@@ -40,6 +49,10 @@
                     color: $peach;
                     font-weight: bold;
                 }
+                @include media('<=phone') {
+                    width: 100%;
+                    font-size: 1rem;
+                }
             }
             a {
                 text-decoration: none;
@@ -48,11 +61,15 @@
                 font-weight: 600;
                 border: 4px solid $green;
                 border-radius: 67px;
-                transition: .3s ease;
+                transition: 0.3s ease;
                 &:hover {
                     text-decoration: none;
                     background-color: $green;
                     color: $white;
+                }
+                @include media('<=phone') {
+                    padding: 5px;
+                    font-size: 1rem;
                 }
             }
         }
@@ -61,16 +78,29 @@
             width: 44%;
             height: 100vh;
             position: relative;
+            @include media('<=tablet') {
+                @include justify(center, center);
+            }
             #github {
                 position: absolute;
                 top: 2%;
                 right: 10%;
                 width: 3.5rem;
+                @include media('<=phone') {
+                    width: 2.5rem;
+                }
             }
             #girl {
                 margin-top: 8rem;
                 margin-left: 4rem;
                 width: 80%;
+                @include media('<=tablet') {
+                    width: 100%;
+                    margin: 0 auto;
+                }
+                @include media('<=phone') {
+                    width: 200px;
+                }
             }
 
             #dots {
@@ -78,18 +108,28 @@
                 position: absolute;
                 right: 10%;
                 bottom: -10px;
+                @include media('<=phone') {
+                    width: 70px;
+                }
             }
             .purple-dots {
                 position: absolute;
                 width: 180px;
                 left: -80px;
                 bottom: 60px;
+                @include media('<=phone') {
+                    width: 120px;
+                }
             }
             .yellow-dots {
                 position: absolute;
                 width: 180px;
                 left: -150px;
                 top: 50px;
+                @include media('<=phone') {
+                    width: 120px;
+                    left: -80px;
+                }
             }
         }
     }
