--- a/src/styles/components/table.scss
+++ b/src/styles/components/table.scss
@@ -5,4 +5,13 @@
     width: 40rem;
     border: 5px solid $yellow;
     border-radius: 1rem;
+    position: relative;
+    @include media('<=desktop', '>tablet') {
+        width: 28rem;
+        height: 28rem;
+    }
+    @include media('<=phone') {
+        width: 22rem;
+        height: 22rem;
+    }
 }
