--- a/src/styles/components/action.scss
+++ b/src/styles/components/action.scss
@@ -1,7 +1,7 @@
 .action {
     height: 100vh;
     background-color: $purple;
-
+    padding-bottom: 2rem;
     &-hero {
         @include justify(space-between, center);
         flex-direction: column;
@@ -38,6 +38,8 @@
                     color: $white;
                     font-family: 'Amatic SC', cursive;
                     font-size: 5rem;
+                    transition: 0.3s ease;
+                    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.25);
 
                     @include justify(center, center);
 
@@ -48,6 +50,10 @@
                         top: 20%;
                         left: 5%;
                         color: $green;
+                        &:hover {
+                            width: 15rem;
+                            height: 15rem;
+                        }
                         @include media('<=desktop') {
                             width: 10rem;
                             height: 10rem;
@@ -64,12 +70,16 @@
                         }
                     }
                     &#solve {
-                        width: 18rem;
-                        height: 18rem;
+                        width: 16rem;
+                        height: 16rem;
                         font-size: 6rem;
                         bottom: 1%;
-                        left: 15%;
+                        left: 10%;
                         color: $yellow;
+                        &:hover {
+                            width: 18rem;
+                            height: 18rem;
+                        }
                         @include media('<=desktop') {
                             width: 12rem;
                             height: 12rem;
@@ -92,6 +102,10 @@
                         bottom: 1%;
                         right: 20%;
                         color: $orange;
+                        &:hover {
+                            width: 10rem;
+                            height: 10rem;
+                        }
                         @include media('<=desktop') {
                             width: 8rem;
                             height: 8rem;
@@ -108,20 +122,13 @@
                         }
                     }
                     &#new {
-                        &.disabled {
-                            opacity: 0.7;
-                            cursor: default;
-                            font-size: 3rem;
-                            @include media('<=desktop') {
-                                font-size: 2rem;
-                            }
-                            @include media('<=phone') {
-                                font-size: 1.5rem;
-                            }
-                        }
                         font-size: 4rem;
                         top: 30%;
                         right: 10%;
+                        &:hover {
+                            width: 8rem;
+                            height: 8rem;
+                        }
                         @include media('<=desktop') {
                             font-size: 2rem;
                             width: 10rem;
@@ -137,6 +144,17 @@
                             width: 7rem;
                             height: 7rem;
                             font-size: 2.5rem;
+                        }
+                        &.disabled {
+                            opacity: 0.7;
+                            cursor: default;
+                            font-size: 3rem;
+                            @include media('<=desktop') {
+                                font-size: 2rem;
+                            }
+                            @include media('<=phone') {
+                                font-size: 1.5rem;
+                            }
                         }
                     }
                 }
