--- a/src/styles/components/action.scss
+++ b/src/styles/components/action.scss
@@ -8,19 +8,19 @@
         position: relative;
 
         &-heading {
-            font-family: 'Amatic SC', cursive;
+            font-family: "Amatic SC", cursive;
             font-size: 4rem;
             color: $white;
             margin: 2rem 0;
-            @include media('<=desktop', '>tablet') {
+            @include media("<=desktop", ">tablet") {
                 font-size: 3rem;
             }
-            @include media('<=phone') {
+            @include media("<=phone") {
                 font-size: 2rem;
             }
         }
         &-btns {
-            @include media('<=phone') {
+            @include media("<=phone") {
                 @include justify(center, center);
                 flex-wrap: wrap;
                 width: 350px;
@@ -36,17 +36,19 @@
                     border-radius: 100%;
                     background-color: $black;
                     color: $white;
-                    font-family: 'Amatic SC', cursive;
+                    font-family: "Amatic SC", cursive;
                     font-size: 5rem;
                     transition: 0.3s ease;
                     box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.25);
 
                     @include justify(center, center);
 
-                    @include media('<=phone') {
+                    @include media("<=phone") {
                         margin: 10px;
                     }
                     &#check {
+                        width: 12rem;
+                        height: 12rem;
                         top: 20%;
                         left: 5%;
                         color: $green;
@@ -54,15 +56,15 @@
                             width: 15rem;
                             height: 15rem;
                         }
-                        @include media('<=desktop') {
+                        @include media("<=desktop") {
                             width: 10rem;
                             height: 10rem;
                         }
-                        @include media('<=tablet') {
+                        @include media("<=tablet") {
                             left: 2%;
                             top: 2%;
                         }
-                        @include media('<=phone') {
+                        @include media("<=phone") {
                             position: relative;
                             width: 6rem;
                             height: 6rem;
@@ -80,15 +82,15 @@
                             width: 18rem;
                             height: 18rem;
                         }
-                        @include media('<=desktop') {
+                        @include media("<=desktop") {
                             width: 12rem;
                             height: 12rem;
                         }
-                        @include media('<=tablet') {
+                        @include media("<=tablet") {
                             left: 2%;
                             bottom: -22%;
                         }
-                        @include media('<=phone') {
+                        @include media("<=phone") {
                             position: relative;
                             width: 6rem;
                             height: 6rem;
@@ -106,15 +108,15 @@
                             width: 10rem;
                             height: 10rem;
                         }
-                        @include media('<=desktop') {
+                        @include media("<=desktop") {
                             width: 8rem;
                             height: 8rem;
                         }
-                        @include media('<=tablet') {
+                        @include media("<=tablet") {
                             right: 2%;
                             bottom: -20%;
                         }
-                        @include media('<=phone') {
+                        @include media("<=phone") {
                             position: relative;
                             width: 6rem;
                             height: 6rem;
@@ -122,24 +124,26 @@
                         }
                     }
                     &#new {
+                        width: 14rem;
+                        height: 14rem;
                         font-size: 4rem;
                         top: 30%;
                         right: 10%;
                         &:hover {
-                            width: 8rem;
-                            height: 8rem;
+                            width: 16rem;
+                            height: 16rem;
                         }
-                        @include media('<=desktop') {
+                        @include media("<=desktop") {
                             font-size: 2rem;
                             width: 10rem;
                             height: 10rem;
                             top: 20%;
                         }
-                        @include media('<=tablet') {
+                        @include media("<=tablet") {
                             right: 2%;
                             top: 2%;
                         }
-                        @include media('<=phone') {
+                        @include media("<=phone") {
                             position: relative;
                             width: 7rem;
                             height: 7rem;
@@ -149,10 +153,10 @@
                             opacity: 0.7;
                             cursor: default;
                             font-size: 3rem;
-                            @include media('<=desktop') {
+                            @include media("<=desktop") {
                                 font-size: 2rem;
                             }
-                            @include media('<=phone') {
+                            @include media("<=phone") {
                                 font-size: 1.5rem;
                             }
                         }
