--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -63,6 +63,11 @@
                     margin: 5px 5px;
                     width: 30px;
                     height: 30px;
+                    transition: 0.3s ease;
+                    border-radius: 100%;
+                    &:hover {
+                        box-shadow: 0 0 2px 2px $yellow;
+                    }
                     @include media('<=phone') {
                         width: 20px;
                         height: 20px;
