--- a/src/styles/components/action.scss
+++ b/src/styles/components/action.scss
@@ -70,6 +70,10 @@
                             width: 6rem;
                             height: 6rem;
                             font-size: 2.5rem;
+                            &:hover {
+                                width: 7rem;
+                                height: 7rem;
+                            }
                         }
                     }
                     &#solve {
@@ -96,6 +100,10 @@
                             width: 6rem;
                             height: 6rem;
                             font-size: 2.5rem;
+                            &:hover {
+                                width: 7rem;
+                                height: 7rem;
+                            }
                         }
                     }
                     &#clear {
@@ -122,6 +130,10 @@
                             width: 6rem;
                             height: 6rem;
                             font-size: 2.5rem;
+                            &:hover {
+                                width: 7rem;
+                                height: 7rem;
+                            }
                         }
                     }
                     &#new {
@@ -149,6 +161,10 @@
                             width: 7rem;
                             height: 7rem;
                             font-size: 2.5rem;
+                            &:hover {
+                                width: 8rem;
+                                height: 8rem;
+                            }
                         }
                         &.disabled {
                             opacity: 0.7;
