--- a/src/styles/components/bannner.scss
+++ b/src/styles/components/bannner.scss
@@ -62,6 +62,7 @@
                 border: 4px solid $green;
                 border-radius: 67px;
                 transition: 0.3s ease;
+                cursor: pointer;
                 &:hover {
                     text-decoration: none;
                     background-color: $green;
