--- a/src/styles/components/action.scss
+++ b/src/styles/components/action.scss
@@ -71,8 +71,9 @@
                             height: 6rem;
                             font-size: 2.5rem;
                             &:hover {
-                                width: 7rem;
-                                height: 7rem;
+                                width: 6rem;
+                                height: 6rem;
+                                box-shadow: 0 0 7px 7px rgba(0, 0, 0, 0.25);
                             }
                         }
                     }
@@ -101,8 +102,9 @@
                             height: 6rem;
                             font-size: 2.5rem;
                             &:hover {
-                                width: 7rem;
-                                height: 7rem;
+                                width: 6rem;
+                                height: 6rem;
+                                box-shadow: 0 0 7px 7px rgba(0, 0, 0, 0.25);
                             }
                         }
                     }
@@ -131,8 +133,9 @@
                             height: 6rem;
                             font-size: 2.5rem;
                             &:hover {
-                                width: 7rem;
-                                height: 7rem;
+                                width: 6rem;
+                                height: 6rem;
+                                box-shadow: 0 0 7px 7px rgba(0, 0, 0, 0.25);
                             }
                         }
                     }
@@ -162,8 +165,9 @@
                             height: 7rem;
                             font-size: 2.5rem;
                             &:hover {
-                                width: 8rem;
-                                height: 8rem;
+                                width: 7rem;
+                                height: 7rem;
+                                box-shadow: 0 0 7px 7px rgba(0, 0, 0, 0.25);
                             }
                         }
                         &.disabled {
