--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -83,6 +83,9 @@
             .copyright {
                 font-size: 1.2rem;
                 color: $grey;
+                @include media('<=phone') {
+                    font-size: 1rem;
+                }
             }
         }
     }
